Удалил всякое ненужное